# abridged

./: .gitignore  LICENSE  README.md  pyproject.toml
abridged/: __init__.py  book.py  params.py  pdf.py
abridged/utils/: __init__.py  pdf.py
notebooks/: find_book_table_of_contents.ipynb
