# pyproject.toml

[tool.poetry]
name = "abridged"
version = "0.1.0"
description = "Read smarter, not longer—Abridged uses NLP to create shorter versions of books without losing their essence or style."
authors = ["Vicente Agüero <vicenteaguero@uc.cl>"]
packages = [
    { include = "abridged", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "*"
requests = "^2.32.3"
pandas = "^2.2.3"
pyarrow = "^19.0.0"
matplotlib = "^3.10.0"
numpy = "^2.2.2"
tiktoken = "^0.8.0"
pypdf2 = "^3.0.1"
openai = "^1.61.0"
pdf2image = "^1.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "^23.7.0"
isort = "^5.10.1"
pytest = "^8.3.4"
ipykernel = "^6.29.5"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
python_files = ["*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"